src/objects/Marketing_Lead__c.object
<CustomObject>
    <description>Marketing Lead from Website Calculator for use with Mailing, etc.</description>
    <fields>
        <fullName>Address_1__c</fullName>
        <description>Street Address 1</description>
        <inlineHelpText>Street Address 1</inlineHelpText>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <description>Street Address 2</description>
        <inlineHelpText>Street Address 2</inlineHelpText>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculator_Estimate_URL__c</fullName>
        <description>Link  to Calculator Estimate</description>
        <formula>HYPERLINK(&apos;http://www.astrumsolar.com/calculator/estimate/&apos;+ TEXT(Calculator_Lead_Id__c) +&apos;/&apos;+ Calculator_Uniqid__c , &apos;Calculator Estimate&apos;,&apos;_blank&apos;)</formula>
        <inlineHelpText>Link  to Calculator Estimate</inlineHelpText>
        <label>Calculator Estimate URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculator_Lead_Id__c</fullName>
        <description>Id of Lead in Calculator Database</description>
        <externalId>true</externalId>
        <label>Calculator Lead Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculator_Submission_Date__c</fullName>
        <description>Date Lead Submitted for Contact on Calculator</description>
        <inlineHelpText>Date Lead Submitted for Contact on Calculator</inlineHelpText>
        <label>Calculator Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculator_Uniqid__c</fullName>
        <description>Calculator Lead Uniqid</description>
        <inlineHelpText>Calculator Lead Uniqid</inlineHelpText>
        <label>Calculator Uniqid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <inlineHelpText>City</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country</description>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>County</description>
        <inlineHelpText>County</inlineHelpText>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email Address</description>
        <inlineHelpText>Email Address</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First Name</description>
        <inlineHelpText>First Name</inlineHelpText>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last Name</description>
        <inlineHelpText>Last Name</inlineHelpText>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Date__c</fullName>
        <description>Original Submission Date</description>
        <inlineHelpText>Original Submission Date</inlineHelpText>
        <label>Lead Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone</description>
        <inlineHelpText>Phone</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State</description>
        <inlineHelpText>State</inlineHelpText>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Company__c</fullName>
        <description>Utility Company</description>
        <inlineHelpText>Utility Company</inlineHelpText>
        <label>Utility Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidationStatus__c</fullName>
        <description>QAS Validation Status</description>
        <inlineHelpText>QAS Validation Status</inlineHelpText>
        <label>QAS Validation Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidationTimestamp__c</fullName>
        <description>QAS Validation Timestamp</description>
        <inlineHelpText>QAS Validation Timestamp</inlineHelpText>
        <label>QAS Validation Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>Zip/Postal Code</description>
        <inlineHelpText>Zip/Postal Code</inlineHelpText>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Marketing Lead</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Address_1__c</columns>
        <columns>Address_2__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip__c</columns>
        <columns>ValidationStatus__c</columns>
        <columns>ValidationTimestamp__c</columns>
        <columns>Calculator_Submission_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ML-{0000000000}</displayFormat>
        <label>Marketing Lead Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>